public/css/style.css
/* ... */
.rtl .table-title, .rtl .table-value {
    position: static;
}

.rtl .table-title{
    display: block;
    float: right !important;
}

.rtl .table-value{
    display: block;
    float: left !important;

}


.rtl .categories li, .sidelink li {
    display: block;
    clear: both;
    padding-bottom: 37px;
    border-bottom: 1px dotted #dee2e6;
    list-style: none;
}

.rtl .tagcloud div{
    text-align: right;
}


.rtl .slider-sec .item-content .text-over-slider p, .rtl .ftco-navbar-light .navbar-toggler{
    letter-spacing: 0
}

